Fixed spinner widget text alignment (editable grid)

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -442,7 +442,7 @@ td.form-item > * {
 	margin-bottom: 1px;
 }
 
-table.form-layout td.form-item .ui-spinner input {
+.form-item-container .ui-spinner input {
 	width: 100%;
 	text-align: right;
 	padding-right: 16px;
